# bioimage_embed

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Snakefile  config.yaml  environment.dev.yml  environment.yml  generator.ipynb  generator.py  idr_get_data.py  main.py  mkdocs.yml  pyproject.toml  pyproject.toml.bkup  similarity_vy_gap.py  slurm_shape_embed.py  slurm_shape_embed_dataset.py  train.ipynb  train.py  train_disto.py  train_distograms.py  train_mask.py  train_pythae.py
.github/workflows/: docker.yaml  notebooks.yaml  poetry.yaml  test.yaml
bio_vae/: __init__.py  datasets.py  utils.py
bio_vae/idr/: __init__.py  legacy.py
bio_vae/lightning/: __init__.py  dataloader.py  torch.py
bio_vae/models/: __init__.py  ae.py  bio_vae.py  factory.py  mask_vae.py  utils.py  vq_vae.py
bio_vae/models/bolts/: __init__.py  pythae_vqvae.py  vae.py  vqvae.py
bio_vae/models/legacy/: __init__.py  ae.py  resnet_ae.py  vae.py  vq_vae.py
bio_vae/models/nets/: convnet.py  resnet.py
bio_vae/models/pyro/: vae_pyro.py
bio_vae/models/pythae/: vqvae.py
bio_vae/models/pythae/legacy/: __init__.py  vq_vae.py
bio_vae/models/tests/: factory.py  mae.py
bio_vae/models/vit/: mae_pythae.py
bio_vae/models/vit/mae/: mae.py
bio_vae/shapes/: __init__.py  lightning.py  mds.py  transforms.py
bio_vae/shapes/tests/: test_.py  test_generator.py  test_shapes.py
bioimage_embed/: __init__.py  augmentation.py  augmentations.py  bie.py  bioimage_embed.py  cli.py  config.py  data_model.py  datasets.py  hydra.py  hydra_cli.py  transforms.py  utils.py
bioimage_embed/datasets/: __init__.py
bioimage_embed/lightning/: __init__.py  dataloader.py  pyro.py  torch.py
bioimage_embed/lightning/tests/: test_channel_aware.py  test_contrastive_learning.py  test_ndims.py
bioimage_embed/models/: __init__.py  factory.py  mae.py  o2vae_shapeembed_integration.diff
bioimage_embed/models/bolts/: __init__.py  resnets.py  vae.py  vqvae.py
bioimage_embed/models/legacy/: __init__.py  ae.py  resnets.py  utils.py  vae.py  vq_vae.py
bioimage_embed/models/nets/: __init__.py  convnet.py  resnet.py
bioimage_embed/models/pyro/: vae.py
bioimage_embed/models/pythae/: vqvae.py
bioimage_embed/models/pythae/legacy/: __init__.py  vq_vae.py
bioimage_embed/models/tests/: factory.py  test_factory.py
bioimage_embed/models/vit/: mae_pythae.py  models_vit.py  sam.py
bioimage_embed/models/vit/mae/: mae.py
bioimage_embed/models/vit/tests/: mae.py
bioimage_embed/shapes/: __init__.py  augmentations.py  contours.py  distance_matrix_loss.py  lightning.py  loss_functions.py  mds.py  transforms.py
bioimage_embed/shapes/tests/: test_generator.py  test_lightning.py  test_shapes.py  utils.py
bioimage_embed/tests/: conftest.py  test_bioimage_embed.py  test_cli.py  test_config.py  test_lightning.py  test_training.py
checkpoints/: last.ckpt
conf/: config.yaml  ivy_gap.yaml
conf/augmentations/: default.yaml
conf/bio_vae/: default.yaml
conf/checkpoints/: default.yaml
conf/dataloader/: default.yaml
conf/hydra/: default.yaml
conf/lightning/: default.yaml
conf/logger/: default.yaml
conf/paths/: default.yaml
conf/pythae/: default.yaml
conf/timm/: default.yaml
conf/trainer/: default.yaml
data/bbbc010/: Snakefile  label_dict.npy
data/vampire/: Snakefile
docs/: cli.md  conf.py  requirements.txt
mask_vae/: datasets.py  transforms.py
mask_vae/lightning/: __init__.py  dataloader.py  dataset.py  pyro.py  torch.py
mask_vae/models/: __init__.py  ae.py  helper.py  mask_vae.py  utils.py  vae.py  vae_pyro.py  vq_vae.py
models/: .gitignore  deleteme.py  docker-compose.yaml  inference.py  model.pt  save_model.py  testidr.py
notebooks/: _shape_embed.ipynb  full.ipynb  idr.ipynb  shape_embed.ipynb  simple.ipynb
scripts/: .train_ivy_gap_legacy.py.swp  README.md  _shape_embed.py  full.py  idr.py  inference_ivy_gap.py  inference_similarity_ivy_gap.py  shape_embed.py  simple.py  train.py  train_ivy_gap.py  train_ivy_gap_legacy.py  train_mask.py  train_pythae.py
scripts/idr/: lightning.study.sh  study.py  study.submitit.py
scripts/ivy_gap/: inference_ivy_gap.py  train_ivy_gap.py
scripts/pythae/: train_pythae.py
scripts/shapeembed/: __init__.py  common_helpers.py  dataset_transformations.py  efd.py  evaluation.py  gather_run_results.py  readme.md  regionprops.py  shapeembed.py  slurm_sweap_shapeembed.py  slurm_sweep_shapeembed.py
scripts/shapeembed/datasets/: MEF_LMNA.py
scripts/shapes/: README.md  _shape_embed.py  check_latent_space.py  distmatrices2contour.py  distmatrix2embeding.py  drawContourFromDM.py  genUMAPs.py  masks2distmatrices.py  shape_embed.py  shape_embed_backup.py
shape_embed/shapes/: __init__.py  distance_matrix_loss.py  lightning.py  mds.py
snakemake/idr/: Snakefile  environment.yml  idr_funs.py
tests/: test_datasets.py  test_generator.py  test_main.py  test_old.py  test_shape_generator.py  test_shapes.py  tests_idr.py
trainer/: setup.py  train.py
vae/: datasets.py
vae/idr/: __init__.py  legacy.py
vae/lightning/: torch.py
vae/models/: __init__.py  mask_vae.py  vae.py  vq_vae.py
