[tool.poetry]
name = "bioimage_embed"
version = "0.1.1"
description = ""
authors = ["Craig <ctr26@ebi.ac.uk>"]
packages = [{include = "bioimage_embed"}]

[tool.poetry.scripts]
bioimage_embed = "bioimage_embed.cli:app"
bie = "bioimage_embed.cli:app"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
umap-learn = {extras = ["plot"], version = "^0.5.3"}
jsonargparse = {extras = ["signatures"], version = "^4.21.0"}
llvmlite = "0.40.1"
pytorch-lightning = "1.*.*"
torchinfo = "^1.8.0"
matplotlib = "^3.7.2"
pyro-ppl = "^1.8.6"
scikit-image = "^0.21.0"
iteround = "^1.0.4"
ipykernel = "^6.25.1"
nonechucks = "^0.4.2"
pythae = "^0.1.1"
pytest = "^7.4.0"
pandas = "^2.1.0"
bokeh = "^3.2.2"
colorcet = "^3.0.1"
holoviews = "^1.17.1"
tensorboard = "^2.14.0"
albumentations = "^1.3.1"
timm = "^0.9.6"
pip = "^23.2.1"
hydra-core = "^1.3.2"
# pyqt5 = "^5.15.9"
requests = "^2.31.0"
shapely = "^2.0.1"
pyefd = "^1.6.0"
tikzplotlib = "^0.10.1"
torchvision = "^0.15.2"
# torchmetrics = "^1.1.1"
torchmetrics = "0.11.4"
# pytorch-lightning-bolts = "^0.3.2.post1"
lightning-bolts = "^0.7.0"
Pillow = "9.5.0"
onnx = "^1.15.0"
typer = "^0.9.0"
ray = {extras = ["all"], version = "^2.8.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
